[tool.poetry]
name = "vision-agent4"
version = "0.1.0"
description = "vision agent trafficweak"
authors = ["정찬용 <nrj6081@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"

[tool.poetry.group.dev.dependencies]
pytorch = "^1.0.2"
numpy = "^2.1.3"
PyQt5 = "^5.15.11"
cv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
