[tool.poetry]
name = "vision-agent5"
version = "0.1.0"
description = "vision agent panorama"
authors = ["정찬용 <nrj6081@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
cv = "^1.0.0"
PyQt5 = "^5.15.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
